feat: remove filter for pizza
