# doc/api.yaml
@@ -45,10 +45,6 @@ components:
       properties:
         id:
           type: string
-        group:
-          type: number
-        page:
-          type: number
         key:
           type: string
         name:
@@ -180,19 +176,6 @@ paths:
               schema:
                   $ref: "#/components/schemas/Word"
   /pizzas:
-    parameters:
-      - name: group
-        in: query
-        required: false
-        description: group number
-        schema:
-          type: string
-      - name: page
-        in: query
-        required: false
-        description: page in the group
-        schema:
-          type: string
     get:
       tags:
         - Pizzas
